# artnet2mendeleev

./: .gitignore  README.md  configure.ac
src/: Makefile.am  artnet2mendeleev.c
